// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Component renders properly when not shown 1`] = `
<div
  className="sc-bxivhb eNNnUP"
  onClick={[Function]}
>
  <div
    className="sc-bdVaJa bKBZyW"
  >
    <div
      className="sc-bwzfXH dJAmok"
      onClick={[Function]}
    >
      <div>
        child
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Component renders properly with show prop 1`] = `
<div
  className="sc-bxivhb eFHWzn"
  onClick={[Function]}
>
  <div />
  <div
    className="sc-bdVaJa bKBZyW"
  >
    <div
      className="sc-bwzfXH dJAmok"
      onClick={[Function]}
    >
      <div>
        child
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover Component renders properly with showBackdrop prop 1`] = `
<div
  className="sc-bxivhb iIeEqz"
  onClick={[Function]}
>
  <div />
  <div
    className="sc-bdVaJa bKBZyW"
  >
    <div
      className="sc-bwzfXH dJAmok"
      onClick={[Function]}
    >
      <div>
        child
      </div>
    </div>
  </div>
</div>
`;
